# desafio-dot-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: agent.py  database.py  main.py  models.py
tests/: test_chat.py
