[project]
name = "tutor-platform-backend"
version = "1.0.0"
description = "Backend (FastAPI + SQLModel + SQLite) do MVP da Plataforma de Tutores Personalizados"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]